--- a/WebApp/Views/Messages/PartialMessageDetail.cshtml
+++ b/WebApp/Views/Messages/PartialMessageDetail.cshtml
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="col-md-4 text-right">
-        <p class="date">@Model.sendTimeUtc.ToString()</p>
+        <p class="date">@Model.sentTime.Value.ToString()</p>
     </div>
     <div class="col-md-12">
         <h4>@Model.subject</h4>
@@ -18,7 +18,7 @@
 <div class="sender-info">
     <div class="row">
         <div class="col-md-12">
-            <strong>@Model.fromName</strong>
+            <strong>@Model.senderName</strong>
             <span>(@Model.from)</span> to
             <strong>me</strong>
             <a class="sender-dropdown"><i class="fa fa-chevron-down"></i></a>
