committing and push sstaged

--- a/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebApp/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -13,7 +13,7 @@
             @using (Html.BeginForm("ForgotPasswordConfirmation", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h1>Create Account</h1>
+                <h1>Forgot Password</h1>
                 @Html.ValidationSummary("", new { @class = "text-danger" })
                 <p class="text-danger">@ViewBag.ErrorMessage</p>
                 <div>
