--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -965,22 +965,22 @@
     //        autoProcessQueue: false
     //    };
     //})
-    $(document).ready(function () {
-        Dropzone.autoDiscover = false;
-        //Simple Dropzonejs
-        $("#dZUpload").dropzone({
-            url: 'SeeDoctor/ProcessRequest',
-            addRemoveLinks: true,
-            success: function (file, response) {
-                var imgName = response;
-                file.previewElement.classList.add("dz-success");
-                console.log("Successfully uploaded :" + imgName);
-            },
-            error: function (file, response) {
-                file.previewElement.classList.add("dz-error");
-            }
-        });
-    });
+    //$(document).ready(function () {
+    //    Dropzone.autoDiscover = false;
+    //    //Simple Dropzonejs
+    //    $("#dZUpload").dropzone({
+    //        url: 'SeeDoctor/ProcessRequest',
+    //        addRemoveLinks: true,
+    //        success: function (file, response) {
+    //            var imgName = response;
+    //            file.previewElement.classList.add("dz-success");
+    //            console.log("Successfully uploaded :" + imgName);
+    //        },
+    //        error: function (file, response) {
+    //            file.previewElement.classList.add("dz-error");
+    //        }
+    //    });
+    //});
 
 </script>
 
