add loging for signalR hub

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -390,6 +390,7 @@
 
 
             // Start the connection
+            $.connection.hub.logging = true;
             $.connection.hub.start().done(function () {
                 var sid = $.cookie('sid');
 
