--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -69,7 +69,7 @@
 </head>
 
 <body class="nav-md">
-    <div>
+    <div style="display:none">
         <input type="text" id="receiverConnectionId" value="" style="display:none;" />
         Please select the doctor before calling...
         <select id="ddlAvailableDoctors"></select>
