--- a/WebApp/Views/Doctor/DoctorTimings.cshtml
+++ b/WebApp/Views/Doctor/DoctorTimings.cshtml
@@ -143,7 +143,7 @@
                 error: errorRes
 
             });
-
+            $.unblockUI();
         }
 
         function errorRes(data) {
