--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -52,7 +52,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile m-b-60">
                         <div class="profile_pic">
-                            <a href="p_profile_page.html"><img src="~/Content/images/img.jpg" alt="..." class="img-circle profile_img"></a>
+                            <a href="@Url.Action("Index","DoctorProfile")"><img src="~/Content/images/img.jpg" alt="..." class="img-circle profile_img"></a>
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -130,10 +130,10 @@
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                     <img src="~/Content/images/img.jpg" alt="">@SessionHandler.UserName
-                                    <span class=" fa fa-angle-down"></span>
+                                    <span class="fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                                    <li><a href="p_profile_page.html"> Profile</a></li>
+                                    <li><a href="@Url.Action("Index","DoctorProfile")"> Profile</a></li>
                                     <li>
                                         <a href="javascript:;">
                                             <span class="badge bg-red pull-right">50%</span>
