--- a/WebApp/Views/Doctor_Admin/DoctorsForApproval.cshtml
+++ b/WebApp/Views/Doctor_Admin/DoctorsForApproval.cshtml
@@ -59,6 +59,7 @@
                                          {
                                         <div class="btn-group">
                                             <input name="id" type="number" style="display:none" value="@item.doctorID">
+                                            <input name="email" type="text" style="display:none" value="@item.email">
                                             <button type="submit" class="btn btn-primary">Approve</button>
                                              @*<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                                 <span class="caret"></span>
