--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -17,20 +17,72 @@
     <!-- Custom Theme Style -->
     <link href="~/Content/css/custom.min.css" rel="stylesheet">
     <link href="~/Content/css/style.css" rel="stylesheet">
+    <link href="@Url.Content("~/Content/css/select2.min.css")" rel="stylesheet" />
+    <link href="~/Content/css/pnotify.css" rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://rawgit.com/FezVrasta/bootstrap-material-design/master/dist/js/material.min.js"></script>
     <script type="text/javascript" src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
     <script type="text/javascript" src="~/Scripts/custom.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/pnotify.js"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.cropit.js")"></script>
 
-
+    <script src="@Url.Content("~/Scripts/select2.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
 
     <script src="~/Scripts/blockUI.js"></script>
     <script src="~/Scripts/jquery.cookie.js"></script>
     <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
+
+
     <!--  If this is an MVC project then use the following -->
     <!--  <script src="~/signalr/hubs" type="text/javascript"></script> -->
     <script src="~/signalr/hubs"></script>
+    <style type="text/css">
+        .redBorder, .redBorder:focus, .redBorder:active{
+               border-color: red
+        }
+
+        /* Spinner */
+        .spinner {
+            width: 50px;
+            height: 50px;
+            display: inline-block;
+            padding: 0px;
+            border-radius: 100%;
+            border: 6px solid;
+            border-top-color: #005a9c;
+            border-bottom-color: #005a9c;
+            border-left-color: rgba(0, 90, 156, 0.15);
+            border-right-color: rgba(0, 90, 156, 0.15);
+            -webkit-animation: spinner 0.8s ease-in-out infinite alternate;
+            animation: spinner 0.8s ease-in-out infinite alternate;
+        }
+
+        @@keyframes spinner {
+            from {
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+            }
+
+            to {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+
+        @@-webkit-keyframes spinner {
+            from {
+                -webkit-transform: rotate(0deg);
+            }
+
+            to {
+                -webkit-transform: rotate(360deg);
+            }
+        }
+    </style>
+
 
   
 </head>
@@ -52,7 +104,8 @@
                     <!-- menu profile quick info -->
                     <div class="profile m-b-60">
                         <div class="profile_pic">
-                            <a href="@Url.Action("Index","DoctorProfile")"><img src="~/Content/images/img.jpg" alt="..." class="img-circle profile_img"></a>
+                            <a href="@Url.Action("Profile","DoctorProfile")">
+                            <img src="@SessionHandler.ProfilePhoto" alt="..." class="img-circle profile_img"></a>
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -129,7 +182,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="~/Content/images/img.jpg" alt="">@SessionHandler.UserName
+                                    <img src="@SessionHandler.ProfilePhoto" alt="">@SessionHandler.UserName
                                     <span class="fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
