--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -25,9 +25,14 @@
     @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/js")
     <script src="@Url.Content("~/Scripts/blockUI.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.cropit.js")"></script>
+    <script src="@Url.Content("~/Scripts/daterangepiker/daterangepicker.js")"></script>
 
     <style type="text/css">
-        
+        .redBorder, .redBorder:focus, .redBorder:active {
+            border-color: red;
+        }
+
         /* Spinner */
         .spinner {
             width: 50px;
@@ -91,11 +96,13 @@
                     <!-- menu profile quick info -->
                     <div class="profile m-b-60">
                         <div class="profile_pic">
-                            <a href="p_profile_page.html"><img src="~/Content/images/img.jpg" alt="..." class="img-circle profile_img"></a>
+                            <a href="@Url.Action("Profile","PatientProfile")">
+                                <img src="@SessionHandler.ProfilePhoto" alt="..." class="img-circle profile_img">
+                            </a>
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>John Doe</h2>
+                            <h2>@SessionHandler.UserName</h2>
                         </div>
                     </div>
                     <!-- /menu profile quick info -->
@@ -170,11 +177,11 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="~/Content/images/img.jpg" alt="">John Doe
-                                    <span class=" fa fa-angle-down"></span>
+                                    <img src="@SessionHandler.ProfilePhoto" alt="">@SessionHandler.UserName
+                                    <span class="fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                                    <li><a href="p_profile_page.html"> Profile</a></li>
+                                    <li><a href="@Url.Action("Index","PatientProfile")"> Profile</a></li>
                                     <li>
                                         <a href="javascript:;">
                                             <span class="badge bg-red pull-right">50%</span>
