Added What's new module

--- a/WebApp/Views/Shared/_DoctorLayout.cshtml
+++ b/WebApp/Views/Shared/_DoctorLayout.cshtml
@@ -142,10 +142,7 @@
                                 </li>
 
                                 <li class="call_history">
-                                    <a href="#"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
-                                    <ul class="nav child_menu">
-                                        <li><a href="whats_news.html">what's News</a></li>
-                                    </ul>
+                                    <a href="@Url.Action("Index","News")"><img src="~/Content/images/icon_call-history.png" alt="">  &nbsp <span class="menu-txt">Whats New</span> </a>
                                 </li>
                             </ul>
                         </div>
